TEST daemon commit 4

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Try to create python daemon..
+Try to create python daemon...
 
 Class Daemon: http://www.jejik.com/articles/2007/02/a_simple_unix_linux_daemon_in_python/
